add some annotate

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.20)
 project(CPP_Practice)
 
 set(CMAKE_CXX_STANDARD 14)
-
-add_executable(CPP_Practice
-        Src/main.cpp)
+#file(GLOB_RECURSE SOURCES "Src/main.cpp")
+#add_executable(${SOURCES})
+add_executable(CPP_Practice "Src/main.cpp")
