--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,6 @@ project(CPP_Practice)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(CPP_Practice
-        Src/main.cpp)
+file(GLOB_RECURSE SOURCES "Src/*.*")
+
+add_executable(${PROJECT_NAME} ${SOURCES})
